Fix Side space
Fix a bug about side space, which is caused by small account region in header.
It is invisible but still exist on the right side.
Add 'overflow-x: clip;' in header to fix it.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,6 +10,7 @@
     opacity: 1;
     z-index: 100;
     font-family: 'Caveat', cursive;
+    overflow-x: clip;
   }
   
   .header-logo {
